WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248860
Adjust fix for Mac JSCOnly build
https://bugs.webkit.org/show_bug.cgi?id=248860
Summary
Adjust fix for Mac JSCOnly build
Ross Kirsling
Reported
2022-12-06 22:38:39 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2022-12-06 22:42:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7247
EWS
Comment 2
2022-12-07 01:53:48 PST
Committed
257466@main
(9ddfeb69a277): <
https://commits.webkit.org/257466@main
> Reviewed commits have been landed. Closing PR #7247 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug