Adjust fix for Mac JSCOnly build https://bugs.webkit.org/show_bug.cgi?id=248860

Unreviewed build fix.

The previous fix aimed to be more precise about where libpas needs warnings squelched,
but somehow it didn't quite work -- perhaps the cmake cache was making them disappear temporarily?

* Source/bmalloc/libpas/src/libpas/pas_bitfit_page_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_heap_config_utils.h:

Canonical link: https://commits.webkit.org/257466@main